# substrate-node-template

./: Cargo.toml  README.animo.md  docker-compose.yml
.devcontainer/: devcontainer.json
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/animo/: Cargo.toml  types.json
pallets/animo/src/: lib.rs  mock.rs  tests.rs
pallets/contact-tracing/: Cargo.toml
pallets/contact-tracing/src/: lib.rs
pallets/exchangable-id/: Cargo.toml
pallets/exchangable-id/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
