[package]
name = "exchangable-id"
version = "0.1.0"
authors = ["irfan"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

frame-support = { version = "2.0.0-rc3", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
frame-system = { version = "2.0.0-rc3", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-io = { version = "2.0.0-rc3", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
pallet-randomness-collective-flip = { version = "2.0.0-rc3", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-runtime = { version = "2.0.0-rc3", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
sp-std = { version = "2.0.0-rc3", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
uuid = { version = '0.8', features = ["v5"], default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.0-rc3", git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }
pallet-balances = { version = "2.0.0-rc3", git = 'https://github.com/paritytech/substrate.git', tag = 'v2.0.0-rc3' }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "pallet-randomness-collective-flip/std",
    "sp-runtime/std",
    "sp-std/std",
]